[gd_scene load_steps=10 format=3 uid="uid://bjm706n8xhj0m"]

[ext_resource type="Texture2D" uid="uid://b3pcou8t2gghw" path="res://assets/2.0/ДЫПЛОМ/катинки/Фон.png" id="1_cd5o4"]
[ext_resource type="FontFile" uid="uid://daexgdpsrdjxi" path="res://assets/2.0/ofont.ru_Calypso.ttf" id="1_iuomp"]
[ext_resource type="Script" path="res://scripts/sport_choose.gd" id="2_pbug7"]
[ext_resource type="Texture2D" uid="uid://dsiyignwxx75e" path="res://assets/2.0/меню.png" id="4_3kxka"]
[ext_resource type="Texture2D" uid="uid://xa3rgyw15se8" path="res://assets/2.0/1.png" id="5_6igsl"]
[ext_resource type="Texture2D" uid="uid://c6dovht32sesj" path="res://assets/2.0/2.png" id="6_tumcg"]
[ext_resource type="Texture2D" uid="uid://cg0hjn181njyn" path="res://assets/2.0/3.png" id="7_a5k8g"]
[ext_resource type="Texture2D" uid="uid://cadukrj66qpad" path="res://assets/2.0/4.png" id="8_l70ys"]

[sub_resource type="Theme" id="Theme_t16oi"]
default_font = ExtResource("1_iuomp")
Button/font_sizes/font_size = 36
Button/fonts/font = ExtResource("1_iuomp")

[node name="sport_choose" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_t16oi")
script = ExtResource("2_pbug7")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0015432
anchor_right = 1.0
anchor_bottom = 1.00154
offset_top = -0.999996
offset_right = 128.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9, 0.9)
texture = ExtResource("1_cd5o4")
metadata/_edit_use_anchors_ = true

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 936.0
offset_top = 568.0
offset_right = 1149.0
offset_bottom = 644.0
texture_normal = ExtResource("4_3kxka")

[node name="TextureButton2" type="TextureButton" parent="."]
offset_left = 176.0
offset_top = 248.0
offset_right = 389.0
offset_bottom = 387.0
texture_normal = ExtResource("5_6igsl")

[node name="TextureButton3" type="TextureButton" parent="."]
offset_left = 432.0
offset_top = 248.0
offset_right = 645.0
offset_bottom = 387.0
texture_normal = ExtResource("6_tumcg")

[node name="TextureButton4" type="TextureButton" parent="."]
offset_left = 688.0
offset_top = 248.0
offset_right = 901.0
offset_bottom = 387.0
texture_normal = ExtResource("7_a5k8g")

[node name="TextureButton5" type="TextureButton" parent="."]
offset_left = 944.0
offset_top = 248.0
offset_right = 1157.0
offset_bottom = 387.0
texture_normal = ExtResource("8_l70ys")

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_texture_button_3_pressed"]
[connection signal="pressed" from="TextureButton4" to="." method="_on_texture_button_4_pressed"]
[connection signal="pressed" from="TextureButton5" to="." method="_on_texture_button_5_pressed"]
